--- a/DoctorSurgery/DoctorSurgeryUI.csproj
+++ b/DoctorSurgery/DoctorSurgeryUI.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SoftwareLibrary\SoftwareLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
